--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name" : "grafana-test",
-  "version" : "0.0.1",
-  "scripts" : {
-    "install" : "./build.sh",
-    "start" : "./run.sh"
+  "name": "grafana-cc",
+  "version": "0.0.1",
+  "scripts": {
+    "install": "./build.sh",
+    "start": "./run.sh"
   },
   "engines": {
-    "node" : "^16"
+    "node": "^22"
   }
 }
